spinner position changed to avoid flickering effect

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,15 @@ footer.footer {
   text-align: center;
   color: #ffffff;
 }
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(255 255 255 / 50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
